--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-.DS_Store
-node_modules
-/dist
+node_modules/
+unpackage/
+dist/dev/
+dist/build/
+project.private.config.json
 
 # local env files
 .env.local
@@ -12,10 +14,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # Editor directories and files
+.project
 .idea
 .vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.sw*
+.hbuilderx/launch.json
