--- a/vue3-demo/vue-project/package.json
+++ b/vue3-demo/vue-project/package.json
@@ -23,10 +23,15 @@
     "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-url": "^8.0.1",
+    "@tsconfig/node18": "^2.0.1",
+    "@types/node": "^20.2.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.13",
     "commitizen": "^4.2.2",
     "core-js": "^3.6.5",
@@ -36,6 +41,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "husky": "^4.3.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.0.1",
@@ -54,16 +60,10 @@
     "rollup-plugin-vue": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue": "^3.2.47",
-    "yargs": "^17.7.1",
-    "@tsconfig/node18": "^2.0.1",
-    "@types/node": "^18.16.8",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/tsconfig": "^0.4.0",
-    "npm-run-all": "^4.1.5",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
-    "vue-tsc": "^1.6.4"
+    "vue": "^3.2.47",
+    "vue-tsc": "^1.6.4",
+    "yargs": "^17.7.1"
   }
 }
