--- a/vue3-demo/vue-project/tsconfig.app.json
+++ b/vue3-demo/vue-project/tsconfig.app.json
@@ -5,6 +5,9 @@
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
+    "types": [
+        "node"
+    ],
     "paths": {
       "@/*": ["./src/*"]
     }
