--- a/webpack-demos/package.json
+++ b/webpack-demos/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "test2",
+  "name": "webpack-demos",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "webpack": "^5.81.0",
-    "webpack-cli": "^5.0.2"
+    "tapable": "^2.2.1",
+    "webpack": "^5.88.2"
   }
 }
