--- a/webpack-demos/package.json
+++ b/webpack-demos/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/generator": "^7.22.9",
+    "@babel/parser": "^7.22.7",
+    "@babel/traverse": "^7.22.8",
+    "@babel/types": "^7.22.5",
     "tapable": "^2.2.1",
     "webpack": "^5.88.2"
   }
